# grpc-nodejs-client-bug-mvr

./: .gitignore  .gitmodules
client/: .eslintignore  .eslintrc.json  .gitignore  .prettierignore  package.json  tsconfig.json
client/src/: client.ts  main.ts
server/: .gitignore  CMakeLists.txt  main.cpp  rpc-server.h  service.proto
